blast this crap so ai doesnt try to resurrect it cause its crap seems so familiar